[package]
name = "nhql"
version = "0.1.0"
authors = ["aomkirby"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.2.0", features = ["openssl"] }
juniper = "0.15.1"
serde = "1.0.60"
serde_json = "1.0.60"
openssl = "0.10.29"
