[package]
name = "nhql"
version = "0.1.0"
authors = ["aomkirby"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-cors = "0.5.3"
reqwest = "0.10.9"

juniper = "0.15.1"
openssl = "0.10.29"

serde = "1.0.60"
serde_json = "1.0.60"
chrono = "0.4"

lazy_static = "1.4.0"
hashbrown = "0.9"
