[package]
name = "nhql"
version = "0.1.0"
authors = ["SaltyAom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.3"
reqwest = "0.10.9"

juniper = "0.15.3"
openssl = "0.10.29"

serde = "1.0.123"
serde_json = "1.0.62"
chrono = "0.4"

lazy_static = "1.4.0"
cached = "0.23.0"